# invoice-backend

./: .gitignore  LICENSE  README.md  pyproject.toml  start.sh
app/: main.py  settings.py
app/facture/: extraction.py  invoice_number.py  person.py  supplier.py  total.py
app/invoice/: agent_client.py  date.py  extraction.py  invoice_number.py  mcp_server_client.py  nlp_loader.py  products.py  supplier.py  total.py
tests/: test_invoice_number.py  test_uploadPdf.py
