[project]
name = "invoice-backend"
version = "0.1.0"
description = "Convert all tyoe of invoices to a structured and known format"
authors = [
    {name = "MEJRI Jihene",email = "mejri.jihene11@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "black (==25.1.0)",
    "click (==8.2.0)",
    "fastapi (==0.115.12)",
    "h11 (==0.16.0)",
    "httptools (==0.6.4)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "isort (==6.0.1)",
    "mypy (==1.15.0)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.8)",
    "pluggy (==1.6.0)",
    "pydantic (==2.11.4)",
    "pydantic-settings (==2.9.1)",
    "pydantic-core (==2.33.2)",
    "pytest (==8.3.5)",
    "python-dotenv (==1.1.0)",
    "pyyaml (==6.0.2)",
    "sniffio (==1.3.1)",
    "starlette (==0.46.2)",
    "typing-inspection (==0.4.0)",
    "typing-extensions (==4.13.2)",
    "uvicorn (==0.34.2)",
    "uvloop (==0.21.0)",
    "watchfiles (==1.0.5)",
    "websockets (==15.0.1)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "spacy (>=3.8.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
python = ">=3.11,<3.13"

